<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutPilihWarna"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    app:behavior_peekHeight="40sp"
    app:layout_behavior="@string/bottom_sheet_behavior">

   <TextView
       android:id="@+id/textPilihWarna"
       android:layout_width="match_parent"
       android:layout_height="@dimen/_40sdp"
       android:fontFamily="@font/nunito_bold"
       android:gravity="center"
       android:includeFontPadding="false"
       android:text="@string/pilih_warna"
       android:textColor="@color/white"
       android:textSize="@dimen/_15sdp"/>

   <LinearLayout
       android:id="@+id/layoutNoteColor"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginLeft="@dimen/_30sdp"
       android:layout_marginBottom="@dimen/_10sdp"
       >
      <FrameLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1">
         <View
             android:id="@+id/viewColor5"
             android:layout_width="@dimen/_35sdp"
             android:layout_height="@dimen/_35sdp"
             android:background="@drawable/background_note_color_5"
             />
         <ImageView
            android:id="@+id/imageColor5"
             android:layout_width="@dimen/_35sdp"
             android:layout_height="@dimen/_35sdp"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_10sdp" />
      </FrameLayout>

      <FrameLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1">
         <View
             android:id="@+id/viewColor4"
             android:layout_width="@dimen/_35sdp"
             android:layout_height="@dimen/_35sdp"
             android:background="@drawable/background_note_color_4"
             />
         <ImageView
             android:id="@+id/imageColor4"
             android:layout_width="@dimen/_35sdp"
             android:layout_height="@dimen/_35sdp"
             android:contentDescription="@string/app_name"
             android:padding="@dimen/_10sdp"
             />
      </FrameLayout>

      <FrameLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1">
         <View
             android:id="@+id/viewColor3"
             android:layout_width="@dimen/_35sdp"
             android:layout_height="@dimen/_35sdp"
             android:background="@drawable/background_note_color_3"/>
         <ImageView
             android:id="@+id/imageColor3"
             android:layout_width="@dimen/_35sdp"
             android:layout_height="@dimen/_35sdp"
             android:contentDescription="@string/app_name"
             android:padding="@dimen/_10sdp" />
      </FrameLayout>

      <FrameLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1">
         <View
             android:id="@+id/viewColor2"
             android:layout_width="@dimen/_35sdp"
             android:layout_height="@dimen/_35sdp"
             android:background="@drawable/background_note_color_2"/>
         <ImageView
             android:id="@+id/imageColor2"
             android:layout_width="@dimen/_35sdp"
             android:layout_height="@dimen/_35sdp"
             android:contentDescription="@string/app_name"
             android:padding="@dimen/_10sdp"
             />
      </FrameLayout>

      <FrameLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1">

         <View
             android:id="@+id/viewColor1"
             android:layout_width="@dimen/_35sdp"
             android:layout_height="@dimen/_35sdp"
             android:background="@drawable/background_note_color_1"
             />
         <ImageView
             android:id="@+id/imageColor1"
             android:layout_width="@dimen/_35sdp"
             android:layout_height="@dimen/_35sdp"
             android:contentDescription="@string/app_name"
             android:padding="@dimen/_10sdp"
             android:src="@drawable/ic_done" />
      </FrameLayout>
   </LinearLayout>

   <LinearLayout
       android:id="@+id/layoutHapusCatatan"
       android:layout_width="match_parent"
       android:layout_height="@dimen/_35sdp"
       android:layout_marginStart="@dimen/_10sdp"
       android:layout_marginEnd="@dimen/_10sdp"
       android:layout_marginBottom="@dimen/_10sdp"
       android:gravity="center_vertical"
       android:visibility="gone"
       android:orientation="horizontal">

   <ImageView
       android:layout_width="22dp"
       android:layout_height="22dp"
       android:contentDescription="@string/app_name"
       android:src="@drawable/ic_delete"
       app:tint="@color/red_button" />

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="@dimen/_10sdp"
       android:fontFamily="@font/nunito_bold"
       android:includeFontPadding="false"
       android:text="@string/hapus_catatan"
       android:textColor="@color/red_button"
       android:textSize="@dimen/_15sdp"/>
   </LinearLayout>
</LinearLayout>